# rc_recture

./: README.md  hello.py  pyproject.toml  requirements.txt
FN-QRC/: calc_mc.py  exp.ipynb
FN-QRC/model/: Qreservoir.py  density_mat.py  operators.py
FN-QRC/utils/: narma_data.py  torch_reg.py
esn/: README.md  README_narma.md  __init__.py  examples.py  model.py  narma_task.py  stm_task.py  test_narma.py
